--- a/src/index.html
+++ b/src/index.html
@@ -66,84 +66,86 @@
               <div class="table-responsive">
                 <div class="row search-form mb-4">
                   <div class="col-6">
-                    <div class="input-group search-input rounded-2 row">
-                      <div class="col-11">
-                        <input
-                          type="search"
-                          placeholder="What're you searching for?"
-                          aria-describedby="button-addon1"
-                          class="form-control border-0 bg-light rounded-2"
-                        />
-                        <div class="form-group d-inline-block mt-3">
-                          <span class="mr-20">
-                            <label class="form-check-label">
-                              <input
-                                checked=""
-                                class="form-check-input mr-5"
-                                type="checkbox" />
-                              User Name <i class="input-helper"></i
-                            ></label>
-                          </span>
-                          <span class="mr-20">
-                            <label class="form-check-label">
-                              <input
-                                checked=""
-                                class="form-check-input mr-5"
-                                type="checkbox" />
-                              Email <i class="input-helper"></i
-                            ></label>
-                          </span>
-                          <span class="mr-20">
-                            <label class="form-check-label">
-                              <input
-                                checked=""
-                                class="form-check-input mr-5"
-                                type="checkbox" />
-                              Company <i class="input-helper"></i
-                            ></label>
-                          </span>
-                          <span class="mr-20">
-                            <label class="form-check-label">
-                              <input
-                                checked=""
-                                class="form-check-input mr-5"
-                                type="checkbox" />
-                              Danger <i class="input-helper"></i
-                            ></label>
-                          </span>
-                          <span>
-                            <label class="form-check-label">
-                              <input
-                                checked=""
-                                class="form-check-input mr-5"
-                                type="checkbox" />
-                              Warning <i class="input-helper"></i
-                            ></label>
-                          </span>
+                    <form class="forms-sample form">
+                      <div class="input-group search-input rounded-2 row">
+                        <div class="col-11">
+                          <input
+                            type="search"
+                            placeholder="What're you searching for?"
+                            aria-describedby="button-addon1"
+                            class="form-control border-0 rounded-2"
+                          />
+                          <div class="form-group d-inline-block mt-3">
+                            <span class="mr-20">
+                              <label class="form-check-label">
+                                <input
+                                  checked=""
+                                  class="form-check-input mr-5"
+                                  type="checkbox" />
+                                User Name <i class="input-helper"></i
+                              ></label>
+                            </span>
+                            <span class="mr-20">
+                              <label class="form-check-label">
+                                <input
+                                  checked=""
+                                  class="form-check-input mr-5"
+                                  type="checkbox" />
+                                Email <i class="input-helper"></i
+                              ></label>
+                            </span>
+                            <span class="mr-20">
+                              <label class="form-check-label">
+                                <input
+                                  checked=""
+                                  class="form-check-input mr-5"
+                                  type="checkbox" />
+                                Company <i class="input-helper"></i
+                              ></label>
+                            </span>
+                            <span class="mr-20">
+                              <label class="form-check-label">
+                                <input
+                                  checked=""
+                                  class="form-check-input mr-5"
+                                  type="checkbox" />
+                                Danger <i class="input-helper"></i
+                              ></label>
+                            </span>
+                            <span>
+                              <label class="form-check-label">
+                                <input
+                                  checked=""
+                                  class="form-check-input mr-5"
+                                  type="checkbox" />
+                                Warning <i class="input-helper"></i
+                              ></label>
+                            </span>
+                          </div>
+                        </div>
+
+                        <div class="col-1 input-group-append p-0">
+                          <button
+                            id="button-addon1"
+                            type="submit"
+                            class="btn btn-link text-primary btn-outline-primary"
+                          >
+                            <svg
+                              xmlns="http://www.w3.org/2000/svg"
+                              width="16"
+                              height="16"
+                              fill="#f2af32"
+                              class="bi bi-search"
+                              viewBox="0 0 16 16"
+                            >
+                              <path
+                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+                              />
+                            </svg>
+                          </button>
                         </div>
                       </div>
-
-                      <div class="col-1 input-group-append p-0">
-                        <button
-                          id="button-addon1"
-                          type="submit"
-                          class="btn btn-link text-primary btn-outline-primary"
-                        >
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="16"
-                            height="16"
-                            fill="#f2af32"
-                            class="bi bi-search"
-                            viewBox="0 0 16 16"
-                          >
-                            <path
-                              d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
-                            />
-                          </svg>
-                        </button>
-                      </div>
-                    </div>
+                    </form>
                   </div>
                   <div class="col-6 text-end">
                     <div class="add text-end">
@@ -273,7 +275,7 @@
             ></button>
           </div>
           <div class="modal-body">
-            <form class="forms-sample">
+            <form class="forms-sample form">
               <div class="form-group">
                 <label for="exampleInputUsername1">Username</label>
                 <input
